force-app/main/default/objects/Onboarding_contact__c/Onboarding_contact__c.object-meta.xml
<CustomObject>
    <description>Junction object for contacts to on boarding</description>
    <label>Onboarding Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Junction object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>