force-app/main/default/objects/Onboarding_contact__c/fields/Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record__c</fullName>
    <description>link to contact record</description>
    <formula>HYPERLINK(Contacts__r.Id,Contacts__r.Full_name__c)</formula>
    <label>Contact Record</label>
    <type>Text</type>
</CustomField>