force-app/main/default/objects/Onboarding_contact__c/fields/On_boarding_contact_role__c.field-meta.xml
<CustomField>
    <fullName>On_boarding_contact_role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Contact Role</label>
    <referenceTo>Onboarding_contact_role__c</referenceTo>
    <relationshipLabel>Onboarding Contacts</relationshipLabel>
    <relationshipName>On_boarding_contacts</relationshipName>
    <type>Lookup</type>
</CustomField>