force-app/main/default/objects/Onboarding_contact__c/fields/Onboarding_Contact_Role_Text__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Contact_Role_Text__c</fullName>
    <description>Converts Onboarding Contact Role lookup field into a text value for use in a Rollup Summary field for Number of Implementers</description>
    <formula>On_boarding_contact_role__r.Name</formula>
    <label>Onboarding Contact Role Text</label>
    <type>Text</type>
</CustomField>