force-app/main/default/objects/Onboarding_contact__c/fields/Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>Text_Formula__c</fullName>
    <description>Additional formula text field to Contact Role Name Text to use in Rollup Summary field</description>
    <formula>Onboarding_Contact_Role_Text__c</formula>
    <label>Text Formula</label>
    <type>Text</type>
</CustomField>