force-app/main/default/objects/Onboarding_contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Onboarding__c</columns>
    <columns>Contacts__c</columns>
    <columns>On_boarding_contact_role__c</columns>
    <columns>NAME</columns>
    <columns>Onboarding_Contact_Role_Text__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>